--- a/Zirpl.AppEngine.VisualStudioAutomation/Zirpl.AppEngine.VisualStudioAutomation.csproj
+++ b/Zirpl.AppEngine.VisualStudioAutomation/Zirpl.AppEngine.VisualStudioAutomation.csproj
@@ -158,7 +158,7 @@
       <DesignTime>True</DesignTime>
     </Compile>
     <Compile Include="AppGeneration\TextTemplating\GeneratedTypeInfo.cs" />
-    <Compile Include="AppGeneration\TextTemplating\TemplateProvider.cs" />
+    <Compile Include="TextTemplating\TemplateProvider.cs" />
     <Compile Include="AppGeneration\TextTemplating\TemplateRunner.cs" />
     <Compile Include="AppGeneration\TextTemplating\OutputInfoProvider.cs" />
     <Compile Include="AppGeneration\TemplateExporter.cs" />
@@ -186,11 +186,11 @@
     <Compile Include="TextTemplating\ITemplateRunner.cs" />
     <Compile Include="TextTemplating\ITransform.cs" />
     <Compile Include="TextTemplating\OutputFileManager.cs" />
-    <Compile Include="TextTemplating\ProjectItemIndex.cs" />
-    <Compile Include="VisualStudio\TransformExtensions.cs" />
+    <Compile Include="VisualStudio\ProjectItemIndex.cs" />
+    <Compile Include="TextTemplating\TransformExtensions.cs" />
     <Compile Include="TextTemplating\ChildTransform.cs" />
     <Compile Include="TextTemplating\BuildActionTypeEnum.cs" />
-    <Compile Include="VisualStudio\TransformHostExtensions.cs" />
+    <Compile Include="TextTemplating\TransformHostExtensions.cs" />
     <Compile Include="VisualStudio\VisualStudioExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TextTemplating\OutputInfo.cs" />
