--- a/Zirpl.AppEngine.VisualStudioAutomation/packages.config
+++ b/Zirpl.AppEngine.VisualStudioAutomation/packages.config
@@ -1,6 +1,38 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net451" />
-  <package id="Zirpl.FluentReflection" version="1.0.0.29-beta" targetFramework="net451" />
-  <package id="Zirpl.Logging" version="2.1.4" targetFramework="net451" />
+  <package id="EnvDTE" version="8.0.1" targetFramework="net451" />
+  <package id="EnvDTE100" version="10.0.1" targetFramework="net451" />
+  <package id="EnvDTE80" version="8.0.1" targetFramework="net451" />
+  <package id="EnvDTE90" version="9.0.1" targetFramework="net451" />
+  <package id="EnvDTE90a" version="9.0.1" targetFramework="net451" />
+  <package id="Microsoft.VisualStudio.CoreUtility" version="15.0.26201" targetFramework="net451" />
+  <package id="Microsoft.VisualStudio.Imaging" version="15.0.26201" targetFramework="net451" />
+  <package id="Microsoft.VisualStudio.OLE.Interop" version="7.10.6070" targetFramework="net451" />
+  <package id="Microsoft.VisualStudio.Shell.14.0" version="14.3.25407" targetFramework="net451" />
+  <package id="Microsoft.VisualStudio.Shell.Framework" version="15.0.26201" targetFramework="net451" />
+  <package id="Microsoft.VisualStudio.Shell.Immutable.10.0" version="10.0.30319" targetFramework="net451" />
+  <package id="Microsoft.VisualStudio.Shell.Immutable.11.0" version="11.0.50727" targetFramework="net451" />
+  <package id="Microsoft.VisualStudio.Shell.Immutable.12.0" version="12.0.21003" targetFramework="net451" />
+  <package id="Microsoft.VisualStudio.Shell.Immutable.14.0" version="14.3.25407" targetFramework="net451" />
+  <package id="Microsoft.VisualStudio.Shell.Interop" version="7.10.6071" targetFramework="net451" />
+  <package id="Microsoft.VisualStudio.Shell.Interop.10.0" version="10.0.30319" targetFramework="net451" />
+  <package id="Microsoft.VisualStudio.Shell.Interop.11.0" version="11.0.61030" targetFramework="net451" />
+  <package id="Microsoft.VisualStudio.Shell.Interop.12.0" version="12.0.30110" targetFramework="net451" />
+  <package id="Microsoft.VisualStudio.Shell.Interop.8.0" version="8.0.50727" targetFramework="net451" />
+  <package id="Microsoft.VisualStudio.Shell.Interop.9.0" version="9.0.30729" targetFramework="net451" />
+  <package id="Microsoft.VisualStudio.TextManager.Interop" version="7.10.6070" targetFramework="net451" />
+  <package id="Microsoft.VisualStudio.TextManager.Interop.8.0" version="8.0.50727" targetFramework="net451" />
+  <package id="Microsoft.VisualStudio.TextTemplating.14.0" version="14.3.25407" targetFramework="net451" />
+  <package id="Microsoft.VisualStudio.TextTemplating.Interfaces.10.0" version="10.0.30319" targetFramework="net451" />
+  <package id="Microsoft.VisualStudio.TextTemplating.Interfaces.11.0" version="11.0.50727" targetFramework="net451" />
+  <package id="Microsoft.VisualStudio.TextTemplating.Interfaces.14.0" version="14.3.25407" targetFramework="net451" />
+  <package id="Microsoft.VisualStudio.Threading" version="15.0.240" targetFramework="net451" />
+  <package id="Microsoft.VisualStudio.Utilities" version="15.0.26201" targetFramework="net451" />
+  <package id="Microsoft.VisualStudio.Validation" version="15.0.82" targetFramework="net451" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net451" />
+  <package id="stdole" version="7.0.3301" targetFramework="net451" />
+  <package id="VSLangProj" version="7.0.3300" targetFramework="net451" />
+  <package id="VSLangProj2" version="7.0.5000" targetFramework="net451" />
+  <package id="WindowsBase" version="4.6.1055.0" targetFramework="net451" />
+  <package id="Zirpl.FluentReflection" version="1.0.0.52-beta" targetFramework="net451" />
 </packages>
